# Starlight-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  Starlight.sln
Starlight-Core/: Starlight-Core.vcxproj  Starlight-Core.vcxproj.filters
Starlight-Core/include/: shared.h
Starlight-Core/include/Maths/: Rect.h  Vec.h  matrix.h
Starlight-Core/include/graphics/: Buffer.h  GLEW.h  GLFW.h  Program.h  Renderable2D.h  ShaderAttribute.h  VertexArray.h  Window.h  shader.h
Starlight-Core/include/input/: InputManager.h  Keyboard.h  Mouse.h
Starlight-Core/include/utils/: File.h  Log.h
Starlight-Core/shaders/: VertexShader.glsl  fragmentShader.glsl
Starlight-Core/src/: Shared.cpp
Starlight-Core/src/graphics/: Buffer.cpp  GLEW.cpp  GLFW.cpp  Program.cpp  Shader.cpp  ShaderAttribute.cpp  Window.cpp
Starlight-Core/src/input/: InputManager.cpp  Keyboard.cpp  Mouse.cpp
Starlight-Core/src/utils/: File.cpp  Log.cpp
Starlight-Example/: Game.cpp  Starlight-Example.vcxproj  Starlight-Example.vcxproj.filters  main.cpp
Starlight-Example/include/: Game.h
Starlight-Test/: .gitignore  ReadMe.txt  Starlight-Test.cpp  Starlight-Test.vcxproj  packages.config  stdafx.cpp
Starlight-Test/core/maths/: Matrix.cpp  Vec.cpp
Starlight-Test/include/: shared.h
core/: CMakeLists.txt
core/include/core/: core.hpp  macros.hpp
core/include/core/gfx/: gfx.hpp  gl.hpp  glfw.hpp  renderer.hpp  window.hpp
core/include/core/input/: enum.hpp  keyboard.hpp  manager.hpp  mouse.hpp
core/include/core/utils/: file.hpp  log.hpp
core/src/gfx/: glfw.cpp  window.cpp
core/src/input/: keyboard.cpp  manager.cpp  mouse.cpp
core/src/utils/: file.cpp
dependcies/: glew-sln.patch
example/: CMakeLists.txt
example/include/example/: game.hpp
example/src/: game.cpp  main.cpp
test/: CMakeLists.txt
test/include/test/: shared.hpp
test/src/: main.cpp
test/src/core/input/: keyboard.cpp  manager.cpp  mouse.cpp
tools/: prep.sh
