project (starlight-example CXX)
set (EXAMPLE_INCLUDE include/example/game.hpp)
set (EXAMPLE_SRC src/main.cpp src/game.cpp)
add_executable (starlight-example ${EXAMPLE_INCLUDE} ${EXAMPLE_SRC})
set_target_properties(starlight-example PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (starlight-example LINK_PUBLIC starlight-core)
target_include_directories (starlight-example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)